--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,12 @@ jobs:
       matrix:
         elixir: ['1.13', '1.12', '1.11', '1.10']
         # All of the above can use this version. For details see: https://hexdocs.pm/elixir/compatibility-and-deprecations.html#compatibility-between-elixir-and-erlang-otp
-        otp: [24, 23, 22]
+        otp: ['24', '23', '22', '21']
+        exclude:
+          - {otp: '21', elixir: '1.13'}
+          - {otp: '21', elixir: '1.12'}
+          - {otp: '24', elixir: '1.10'}
+    steps:
     steps:
       - uses: actions/checkout@v2
       - uses: erlef/setup-beam@v1
@@ -34,7 +39,7 @@ jobs:
       matrix:
         elixir: ['1.13']
         # All of the above can use this version. For details see: https://hexdocs.pm/elixir/compatibility-and-deprecations.html#compatibility-between-elixir-and-erlang-otp
-        otp: [24]
+        otp: ['24']
     steps:
       - uses: actions/checkout@v2
       - uses: erlef/setup-beam@v1
