--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,9 @@ jobs:
           key: cache-${{ runner.os }}-${{ env.cache-name }}-${{ matrix.otp }}-${{ matrix.elixir }}
           restore-keys: |
              cache-${{ runner.os }}-${{ env.cache-name }}-
+      - run: mix deps.unlock --check-unused
       - run: mix deps.get
       - run: mix compile --warnings-as-errors
       - run: mix format --check-formatted
-      - run: mix credo --strict
+      - run: mix credo --strict --all
       - run: mix dialyzer --halt-exit-status
