--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     name: Test (OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}})
     strategy:
       matrix:
-        elixir: ['1.12', '1.11', '1.10']
+        elixir: ['1.13', '1.12', '1.11', '1.10']
         # All of the above can use this version. For details see: https://hexdocs.pm/elixir/compatibility-and-deprecations.html#compatibility-between-elixir-and-erlang-otp
         otp: [24, 23, 22]
     steps:
@@ -32,7 +32,7 @@ jobs:
     name: Linting
     strategy:
       matrix:
-        elixir: ['1.12']
+        elixir: ['1.13']
         # All of the above can use this version. For details see: https://hexdocs.pm/elixir/compatibility-and-deprecations.html#compatibility-between-elixir-and-erlang-otp
         otp: [24]
     steps:
