--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, reopened, synchronize]
   push:
     branches:
-      - 'master'
+      - "main"
 
 jobs:
   test:
@@ -15,13 +15,19 @@ jobs:
     name: Test (OTP ${{ matrix.otp }} / Elixir ${{ matrix.elixir }})
     strategy:
       matrix:
-        elixir: ['1.15', '1.14', '1.13', '1.12']
-        otp: ['26', '25', '24', '23']
+        elixir: ["1.16", "1.15", "1.14", "1.13", "1.12"]
+        otp: ["26", "25", "24", "23", "22"]
         exclude:
-          - {otp: '23', elixir: '1.15'}
-          - {otp: '25', elixir: '1.12'}
-          - {otp: '26', elixir: '1.12'}
-          - {otp: '26', elixir: '1.13'}
+          - { otp: "23", elixir: "1.16" }
+          - { otp: "22", elixir: "1.16" }
+          - { otp: "23", elixir: "1.15" }
+          - { otp: "22", elixir: "1.15" }
+          - { otp: "26", elixir: "1.14" }
+          - { otp: "22", elixir: "1.14" }
+          - { otp: "26", elixir: "1.13" }
+          - { otp: "25", elixir: "1.13" }
+          - { otp: "26", elixir: "1.12" }
+          - { otp: "25", elixir: "1.12" }
     steps:
       - uses: actions/checkout@v3
       - uses: erlef/setup-beam@v1
@@ -36,8 +42,8 @@ jobs:
     name: Linting
     strategy:
       matrix:
-        elixir: ['1.15']
-        otp: ['26']
+        elixir: ["1.16"]
+        otp: ["26"]
     steps:
       - uses: actions/checkout@v3
       - uses: erlef/setup-beam@v1
