--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,11 @@ jobs:
     name: Test (OTP ${{ matrix.otp }} / Elixir ${{ matrix.elixir }})
     strategy:
       matrix:
-        elixir: ["1.17", "1.16", "1.15", "1.14", "1.13"]
+        elixir: ["1.18", "1.17", "1.16", "1.15", "1.14"]
         otp: ["27", "26", "25", "24", "23"]
         exclude:
+          - { otp: "24", elixir: "1.18" }
+          - { otp: "23", elixir: "1.18" }
           - { otp: "24", elixir: "1.17" }
           - { otp: "23", elixir: "1.17" }
           - { otp: "22", elixir: "1.17" }
@@ -46,7 +48,7 @@ jobs:
     name: Linting
     strategy:
       matrix:
-        elixir: ["1.17"]
+        elixir: ["1.18"]
         otp: ["27"]
     steps:
       - uses: actions/checkout@v4
