--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         elixir: ["1.19", "1.18", "1.17", "1.16", "1.15"]
-        otp: ["28", 27", "26", "25", "24"]
+        otp: ["28", "27", "26", "25", "24"]
         exclude:
           - { otp: "24", elixir: "1.19" }
           - { otp: "24", elixir: "1.18" }
