--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
           - { otp: "25", elixir: "1.19" }
           - { otp: "27", elixir: "1.16" }
           - { otp: "27", elixir: "1.15" }
+          - { otp: "28", elixir: "1.17" }
           - { otp: "28", elixir: "1.16" }
           - { otp: "28", elixir: "1.15" }
     steps:
